--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
       <body>
-        <div class ="may-i-ask-what-would-kendrick-and-m-m-mustard-think-of-the-v0-i69cns9bwwaf1.webp" alt="foto profil saya">
-   <img src="foto-profile.jpg" alt="foto profile saya">
+        <div class ="may-i-ask-what-would-kendrick-and-m-m-mustard-think-of-the-v0-i69cns9bwwaf1.webp" alt="foto profile saya">
+   <img src="may-i-ask-what-would-kendrick-and-m-m-mustard-think-of-the-v0-i69cns9bwwaf1.webp" alt="foto profile saya">
      <h1> Hanieful Febriansyah </h1>
         <p> Siswa yang tertarik dengan teknologi dan desain.
         Selamat datang di website pertama saya</p>
