--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         <div class= "foto profile saya">
    <img src="may-i-ask-what-would-kendrick-and-m-m-mustard-think-of-the-v0-i69cns9bwwaf1.webp" alt="foto profile saya">
      <h1> Hanieful Febriansyah </h1>
-        <p> Siswa yang tertarik dengan teknologi dan desain.
-        Selamat datang di website pertama saya</p>
-        <a href= "https://www.typingclub.com/> belajar mengetik disini </a>
-          <button id="sapaButton">siapa saya?</button>
-          <script src="script.js"></script>
+       <p> Siswa yang tertarik dengan teknologi dan desain.
+       Selamat datang di website pertama saya </p>
+       <a href= "https://www.typingclub.com/> belajar mengetik disini </a>
+       <button id="sapaButton">siapa saya?</button>
+       </div>
+       <script src="script.js"></script> 
       </body>
 </html>
