--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="foto-profil-saya">
-    <img src="may-i-ask-what-would-kendrick-and-m-m-mustard-think-of-the-v0-i69cns9bwwaf1.webp" alt="Foto profil saya">
+  <div class="kartu-profil">
+    <img src="may-i-ask-what-would-kendrick-and-m-m-mustard-think-of-the-v0-i69cns9bwwaf1.webp" alt="foto profil saya">
     
     <h1>Hanieful Febriansyah</h1>
     
