--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <a href="https://www.typingclub.com/" target="_blank">Belajar mengetik di sini</a>
     
-    <button id="sapaButton">Siapa saya?</button>
+    <button id="sapaButton">Sapa saya!!!</button>
   </div>
 
   <script src="script.js"></script>
